@@ -1,3 +1,5 @@
+    - Added scrollbar to entry editor when it is too high to fit in its panel. Patch
+      by Matthias Erll 
     - Made it possible to copy entries from the search dialog.    
     - Added proper error message when trying to search with invalid regular expression.
     - Added error dialog on startup if custom look and feel cannot be loaded.
